--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <base href="/">
+  <base href="/test-web-components/">
   <title>Health Vault</title>
   <link rel="stylesheet" href="./styles.css">
   <link href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet'>
